[package]
name = "xml2arb"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }

serde_json = { version = "1.0.113", features = ["preserve_order"] }

xml-rs = "0.8.19"
anyhow = "1.0.80"
